crates/vite_task/tests/snapshots/snapshots__query - ambiguous task name@transitive-dependency-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: err
input_file: crates/vite_task/tests/fixtures/transitive-dependency-workspace
---
{
  "SpecifierLookupError": {
    "specifier": {
      "package_name": "@test/a",
      "task_name": "build"
    },
    "lookup_error": {
      "AmbiguousPackageName": {
        "package_name": "@test/a",
        "package_paths": [
          "packages/a",
          "packages/another-a"
        ]
      }
    }
  }
}
