crates/vite_task/tests/snapshots/snapshots__query - explicit package name under non-package cwd@transitive-dependency-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: execution_graph_snapshot
input_file: crates/vite_task/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "task": {
      "package_dir": "packages/c",
      "task_name": "build"
    },
    "deps": []
  }
]
