crates/vite_task/tests/snapshots/snapshots__query - ignore depends on@transitive-dependency-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: execution_graph_snapshot
input_file: crates/vite_task/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "task": {
      "package_dir": "packages/a",
      "task_name": "build"
    },
    "deps": []
  }
]
