crates/vite_task/tests/snapshots/snapshots__query - recursive and transitive@transitive-dependency-workspace.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: err
input_file: crates/vite_task_graph/tests/fixtures/transitive-dependency-workspace
---
RecursiveTransitiveConflict
