crates/vite_task/tests/snapshots/snapshots__query - recursive@transitive-dependency-workspace.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: execution_graph_snapshot
input_file: crates/vite_task_graph/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "task": {
      "package_dir": "packages/a",
      "task_name": "build"
    },
    "deps": [
      {
        "package_dir": "packages/a",
        "task_name": "test"
      },
      {
        "package_dir": "packages/b2",
        "task_name": "build"
      },
      {
        "package_dir": "packages/c",
        "task_name": "build"
      }
    ]
  },
  {
    "task": {
      "package_dir": "packages/a",
      "task_name": "test"
    },
    "deps": []
  },
  {
    "task": {
      "package_dir": "packages/another-a",
      "task_name": "build"
    },
    "deps": []
  },
  {
    "task": {
      "package_dir": "packages/b2",
      "task_name": "build"
    },
    "deps": [
      {
        "package_dir": "packages/c",
        "task_name": "build"
      }
    ]
  },
  {
    "task": {
      "package_dir": "packages/c",
      "task_name": "build"
    },
    "deps": []
  }
]
