crates/vite_task/tests/snapshots/snapshots__query - transitive in package without the task@transitive-dependency-workspace.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: execution_graph_snapshot
input_file: crates/vite_task_graph/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "task": {
      "package_dir": "packages/b1",
      "task_name": "lint"
    },
    "deps": [
      {
        "package_dir": "packages/c",
        "task_name": "lint"
      }
    ]
  },
  {
    "task": {
      "package_dir": "packages/c",
      "task_name": "lint"
    },
    "deps": []
  }
]
