crates/vite_task/tests/snapshots/snapshots__query - transitive non existent task@transitive-dependency-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: err
input_file: crates/vite_task/tests/fixtures/transitive-dependency-workspace
---
{
  "SpecifierLookupError": {
    "specifier": {
      "package_name": null,
      "task_name": "non-existent-task"
    },
    "lookup_error": {
      "TaskNameNotFound": {
        "package_name": "@test/a",
        "task_name": "non-existent-task"
      }
    }
  }
}
