crates/vite_task/tests/snapshots/snapshots__task graph@conflict-test.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task_graph/tests/fixtures/conflict-test
---
[
  {
    "id": {
      "package_dir": "packages/scope-a",
      "task_name": "b#c"
    },
    "command": "echo Task b#c in scope-a",
    "cwd": "packages/scope-a",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/scope-a-b",
      "task_name": "c"
    },
    "command": "echo Task c in scope-a#b",
    "cwd": "packages/scope-a-b",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/test-package",
      "task_name": "test"
    },
    "command": "echo Testing",
    "cwd": "packages/test-package",
    "depends_on": [
      [
        {
          "package_dir": "packages/scope-a-b",
          "task_name": "c"
        },
        "Explicit"
      ]
    ]
  }
]
